modules/aws_security_group/dynamic.tf
resource "aws_security_group" "dynamic" {
  name        = "dynamic"
  description = "This is SG using DYNAMIC"
  vpc_id      = var.vpc_id


  dynamic "ingress" {
    for_each = var.ingress_rules

    content {
      description = ingress.key
      from_port   = ingress.value.from_port
      to_port     = ingress.value.to_port
      protocol    = ingress.value.protocol
      cidr_blocks = ingress.value.cidr_blocks
    }

  }

  dynamic "egress" {
    for_each = var.egress_rules

    content {
      description = egress.key
      from_port   = egress.value.from_port
      to_port     = egress.value.to_port
      protocol    = egress.value.protocol
      cidr_blocks = egress.value.cidr_blocks
    }

  }

  tags = {
    Name = "DYNAMIC"
  }
}
